[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.calcipy.test]
pythons = ["3.8"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
version_files = ["pyproject.toml", "tail_jsonl/__init__.py"]

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "tail_jsonl"
length_sort = false
line_length = 120
multi_line_output = 5

[tool.poetry]
authors = ["Kyle King <dev.act.kyle@gmail.com>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9"
] # https://pypi.org/classifiers/
description = "Tail JSONL Logs"
documentation = "https://tail-jsonl.kyleking.me"
include = ["LICENSE.md"]
keywords = []
license = "MIT"
maintainers = []
name = "tail_jsonl"
readme = "docs/README.md"
repository = "https://github.com/kyleking/tail-jsonl"
version = "0.0.1"


[tool.poetry.scripts]
tail-jsonl = "tail_jsonl:main"

[tool.poetry.dependencies]
calcipy = ">=0.21.3"
python = "^3.8.12"
rich = ">=13.3.1"

[tool.poetry.dev-dependencies]
calcipy = {extras = ["dev", "lint", "test"], version = "*"}

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kyleking/tail-jsonl/issues"
"Changelog" = "https://github.com/kyleking/tail-jsonl/blob/main/docs/docs/CHANGELOG.md"
