[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.commitizen]
version = "1.2.5"
version_files = ["pyproject.toml:^version", "tail_jsonl/__init__.py:^__version"]

[tool.poetry]
authors = ["Kyle King <dev.act.kyle@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
] # https://pypi.org/classifiers/
description = "Pretty Print Tailed JSONL Logs"
documentation = "https://tail-jsonl.kyleking.me"
include = ["LICENSE"]
keywords = []
license = "MIT"
maintainers = []
name = "tail_jsonl"
readme = "docs/README.md"
repository = "https://github.com/kyleking/tail-jsonl"
version = "1.2.5"

[tool.poetry.dependencies]
python = "^3.8.12"
corallium = ">=0.3.0"
dotted-notation = ">=0.9.2"
pydantic = ">=2.0.3"

[tool.poetry.group.dev.dependencies]
calcipy = {extras = ["doc", "lint", "nox", "stale", "tags", "test", "types"], version = ">=1.5.0"}
pytest-cache-assert = ">=3.0.8"
pytest-pretty = ">=1.0.1"
tomli-w = ">=1.0.0"

[tool.poetry.scripts]
tail-jsonl = "tail_jsonl.scripts:start"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kyleking/tail-jsonl/issues"
"Changelog" = "https://github.com/kyleking/tail-jsonl/blob/main/docs/docs/CHANGELOG.md"

[tool.pyright]
include = ["tail_jsonl"]
pythonVersion = "3.8"
